# oop-course-repo

./: .gitignore  Program.cs  README.md  csharp-classification.csproj  csharp-classification.sln
Core/: Alien.cs  RuleSet.cs  Subspecies.cs
Resources/Inputs/: input.json
Resources/Outputs/: hitchHiker.json  rings.json
lab-Class-and-Objects-galore/: lab-Class-and-Objects-galore.sln
lab-Class-and-Objects-galore/Task1/: Display.cs  Program.cs
lab-Class-and-Objects-galore/Task2/: FileReader.cs  Program.cs  TextData.cs  test.txt
lab-Class-and-Objects-galore/Task3/: Assistant.cs  Display.cs  Program.cs
lab-Class-and-Objects-galore/TaskBonus/: FileReader.cs  Program.cs  TextData.cs  test2.txt
lab-car-service/: README.md  generator.cpp  generator.py
lab-car-service/cpp/: CMakeLists.txt  README.md  generator.cpp
lab-coffee-inheritance/: Tasks.code-workspace  lab-coffee-inheritance.sln
lab-coffee-inheritance/Task1/: Classes.cs  Task1.sln
lab-coffee-inheritance/Task2/: Americano.cs  Cappuccino.cs  Coffee.cs  Program.cs  PumpkinSpiceLatte.cs  SyrupCappuccino.cs  Task2.sln
lab-coffee-inheritance/Task3/: Americano.cs  Cappuccino.cs  Coffee.cs  Program.cs  PumpkinSpiceLatte.cs  SyrupCappuccino.cs  Task3.sln
lab-coffee-inheritance/Task4/: Task4.sln
lab-papers-please/: README.md  classification.md  input.json
lab-papers-please/Scalaa-classification/: .gitignore  build.sbt
lab-papers-please/cs-classifcation/: Program.cs  cs-classifcation.csproj  cs-classifcation.sln
lab-papers-please/csharp-classification/: .gitignore  Program.cs  (+1 more)
(+131 files in other folders)
